# bwt-ai-coder

pm/: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile
pm/backend/: AGENTS.md  ai.py  auth.py  db.py  main.py  pyproject.toml
pm/backend/tests/: client.py  seed.py  test_ai.py  test_auth.py  test_board.py  test_db.py  test_hello.py
pm/docs/: DATABASE.md  PLAN.md
pm/frontend/: AGENTS.md  playwright.config.ts
pm/frontend/src/app/: globals.css  layout.tsx
pm/frontend/src/app/login/: page.tsx
pm/frontend/src/components/: ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx
pm/frontend/src/lib/: api.ts
pm/frontend/tests/: ai-chat.spec.ts  kanban.spec.ts  persistence.spec.ts
pm/scripts/: start.sh  stop.sh  test.sh
site/: package-lock.json  package.json  steps.md  tailwind.config.ts  tutorial.md
site/.claude/: settings.local.json
site/src/app/: globals.css  layout.tsx  page.tsx
site/src/app/api/chat/: route.ts
site/src/components/: About.tsx  Contact.tsx  DigitalTwin.tsx  DigitalTwinPromo.tsx  Education.tsx  Experience.tsx  Hero.tsx  Marquee.tsx  Navbar.tsx  Portfolio.tsx  Principles.tsx  Stack.tsx
site/src/lib/: data.ts
