[project]
name = "pm-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.118",
    "uvicorn[standard]>=0.34",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.4",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
